--- a/css/style.css
+++ b/css/style.css
@@ -1160,15 +1160,15 @@ footer .sns{
         flex-wrap: wrap;
         width: calc(100% - 32px);
         height: 63vh;
-        justify-content: center;
+        justify-content: space-between;
         margin-top: 8.444%;
     }
     .sec-5 .img-box a {
         width: calc(50% - 8px);
         height: calc(33.333% - 8px);
     }
-    .sec-5 .img-box a:nth-child(odd){
-        margin-right: 8px;
+    .sec-5 .img-box a:nth-child(even){
+        margin-right: 0;
     }
     .title h1 {
         font-size: 24px;
